# advent-of-code

./: .clang-format  .gitignore  aoc-2018.sln  template.cpp
01/: 01-chronal-calibration.cpp  01.vcxproj  01.vcxproj.filters
02/: 02-ims.cpp  02.vcxproj  02.vcxproj.filters
03/: 03.vcxproj  03.vcxproj.filters
04/: 04-guards.cpp  04.vcxproj
05/: 05-alchemy.cpp  05.vcxproj  05.vcxproj.filters
06/: 06-chronal-coordinates.cpp  06.vcxproj  06.vcxproj.filters
2018/03/: 03-slice.cpp
2018/04/: 04.vcxproj.filters
2019/: .gitignore  CMakeLists.txt  build.sh
2019/01/: rocket-equation.cpp
2019/02/: program-alert.cpp
2019/03/: crossed-wires.cpp
2019/04/: secure-container.cpp
2019/05/: sunny-with-a-chance.cpp
2019/06/: orbits.cpp
2020/01/: report-repair.py
2020/02/: password-philosophy.py
